--- a/StreamingMusic/StreamingMusic/StreamingMusic.Android/Properties/AndroidManifest.xml
+++ b/StreamingMusic/StreamingMusic/StreamingMusic.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.kolamkode.relaxguitarmusic" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:label="@string/app_label" android:theme="@style/MainTheme"></application>
+	<application android:label="@string/app_label" android:theme="@style/MainTheme" android:hardwareAccelerated="true">
+		<meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-1276375523060105~3261624055"/>
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
