Implemet Ads & Next Button

--- a/StreamingMusic/StreamingMusic/StreamingMusic.Android/Properties/AndroidManifest.xml
+++ b/StreamingMusic/StreamingMusic/StreamingMusic.Android/Properties/AndroidManifest.xml
@@ -5,6 +5,10 @@
 		<meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-1276375523060105~3261624055"/>
+		<activity
+        android:name="com.google.android.gms.ads.AdActivity"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+        android:theme="@android:style/Theme.Translucent" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
