--- a/StreamingMusic/StreamingMusic/StreamingMusic.Android/StreamingMusic.Android.csproj
+++ b/StreamingMusic/StreamingMusic/StreamingMusic.Android/StreamingMusic.Android.csproj
@@ -69,21 +69,22 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.GooglePlayServices.Ads">
       <Version>120.3.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdBanner_Droid.cs" />
-    <Compile Include="AdInterstitial_Droid.cs" />
-    <Compile Include="InterstitialCallback.cs" />
-    <Compile Include="InterstitialCallbackinherit.cs" />
+    <Compile Include="Services\AdBannerService.cs" />
+    <Compile Include="Services\AdInterstitialService.cs" />
+    <Compile Include="Services\AdInterstitialCallback.cs" />
+    <Compile Include="Services\AdInterstitialCallbackinherit.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LocalNotificationsService.cs" />
+    <Compile Include="Services\MediaPlayerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -135,6 +136,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\notif_nowplaying.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\btn_next.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\btn_previous.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
