--- a/StreamingMusic/StreamingMusic/StreamingMusic.Android/StreamingMusic.Android.csproj
+++ b/StreamingMusic/StreamingMusic/StreamingMusic.Android/StreamingMusic.Android.csproj
@@ -69,6 +69,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.8.116</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.GooglePlayServices.Ads">
@@ -83,6 +86,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DatabaseService.cs" />
     <Compile Include="Services\LocalNotificationsService.cs" />
     <Compile Include="Services\MediaPlayerService.cs" />
   </ItemGroup>
